# argos

./: .env.example  .gitignore  Dockerfile  README.md  check_db.py  debug_chroma.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  router.py
app/api/routers/: auth.py  chat.py  document.py  users.py  voice.py
app/core/: config.py  database.py  dependencies.py  middleware.py  migrations.py  oauth.py  startup.py
app/core/interface/: embedder.py
app/database/: schema.py  session.py
app/engines/: document_engine.py  indexing_engine.py
app/engines/chat_engine/: conversation_store.py  engine.py  graph.py  state.py
app/engines/document_engine/: engine.py  sqlite_repository.py
app/infrastructure/factories/: embedder_factory.py  llm_factory.py
app/infrastructure/interface/: conversation_repository.py  feature_repository.py  llm.py
app/services/: chroma_service.py
app/services/conversation/: __init__.py  model.py  repository.py  service.py  sqlite_repository.py
prompts/: extraction_agent.md  nl2sql_answer.md  nl2sql_generator.md  router_agent.md  synthesizer_answer.md  vision_description.md
test/: check_db.py  check_db_structure.py  check_prompt.py  clear_chroma.py  kosongkan.py  test_chat.py  test_engine.py
tests/: conftest.py  test_config.py  test_conversation_repository.py  test_conversation_service.py  test_conversation_store.py  test_extraction_service.py  test_nl2sql_executor.py  test_nl2sql_security.py  test_nl2sql_service.py
web-app/: index.html  login.html
web-app/css/: style.css
web-app/js/: main.js
(+52 files in other folders)
